--- a/index.html
+++ b/index.html
@@ -165,47 +165,59 @@
         .social-buttons {
             margin-top: 20px;
             display: flex;
-            justify-content: space-around;
-        }
-
-        .social-btn {
-            display: flex;
-            align-items: center;
             justify-content: center;
-            padding: 10px 20px;
-            border-radius: 30px;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            text-decoration: none;
-            transition: 0.3s ease-in-out;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            width: 45%;
+            gap: 15px;
         }
 
-    .whatsapp {
-        background: #25D366;
-    }
+        .social-buttons a {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            text-decoration: none;
+            color: white;
+            transition: 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
 
-    .whatsapp:hover {
-        background: #1da851;
-    }
+        .whatsapp-btn {
+            background: #25D366;
+        }
 
-    .youtube {
-        background: #FF0000;
-    }
+        .whatsapp-btn:hover {
+            background: #1da851;
+        }
 
-    .youtube:hover {
-        background: #cc0000;
-    }
+        .youtube-btn {
+            background: #FF0000;
+        }
+
+        .youtube-btn:hover {
+            background: #cc0000;
+        }
+
+        .iframe-container {
+            width: 100%;
+            height: 100vh;
+            display: none;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
 
     </style>
 </head>
 
 <body>
 
-    <div class="login-container">
-        <div class="avatar-container">
+    <div class="login-container" id="login-container">
+        <div class="avatar-container" id="avatar-container">
             <div class="avatar-border">
                 <div class="avatar"></div>
             </div>
@@ -217,6 +229,7 @@
                 <i class="fas fa-key"></i>
                 <input type="text" id="key" placeholder="ENTER YOUR KEY" required>
             </div>
+            
             <button type="submit" class="login-btn">Login</button>
         </form>
 
@@ -225,14 +238,33 @@
         </div>
 
         <div class="social-buttons">
-            <a href="https://chat.whatsapp.com/CuakMrQkRES9huI7ayhDDm" class="social-btn whatsapp" target="_blank">
-                <i class="fab fa-whatsapp"></i> WhatsApp
+            <a href="https://chat.whatsapp.com/CuakMrQkRES9huI7ayhDDm" target="_blank" class="whatsapp-btn">
+                <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://youtube.com/@namma_village_thiruvila?si=y0kr9WkMd5umke80" class="social-btn youtube" target="_blank">
-                <i class="fab fa-youtube"></i> YouTube
+            <a href="" target="_blank" class="youtube-btn">
+                <i class="fab fa-youtube"></i>
             </a>
         </div>
     </div>
+
+    <div class="iframe-container" id="iframe-container">
+        <iframe id="content-frame"></iframe>
+    </div>
+
+    <script>
+        document.getElementById("login-form").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let keyInput = document.getElementById("key").value;
+
+            if (keyInput === "1612") {
+                document.getElementById("login-container").style.display = "none";
+                document.getElementById("iframe-container").style.display = "block";
+                document.getElementById("content-frame").src = "https://arunsurya111.github.io/hackersuryaa/";
+            } else {
+                alert("Invalid Key! Try again.");
+            }
+        });
+    </script>
 
 </body>
 
