--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
                 <div class="avatar"></div>
             </div>
         </div>
-        <h2>SURYA AI S3 ULTRA</h2>
+        <h2>SURYA 🔥 FLASH AI S3 🔥</h2>
 
         <form id="login-form">
             <div class="input-box">
                 <i class="fas fa-key"></i>
-                <input type="text" id="key" placeholder="ENTER YOUR KEY" required>
+                <input type="text" id="key" placeholder="ENTER SECRET KEY" required>
             </div>
             
             <button type="submit" class="login-btn">Login</button>
@@ -259,9 +259,9 @@
             if (keyInput === "1122") {
                 document.getElementById("login-container").style.display = "none";
                 document.getElementById("iframe-container").style.display = "block";
-                document.getElementById("content-frame").src = "https://arunsurya111.github.io/hackersuryaa/";
+                document.getElementById("content-frame").src = "https://flash-ai-s2.netlify.app/user-area/";
             } else {
-                alert("Invalid Key! Try again.");
+                alert("❌ Key Not Found In Server!");
             }
         });
     </script>
