--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             if (keyInput === "1122") {
                 document.getElementById("login-container").style.display = "none";
                 document.getElementById("iframe-container").style.display = "block";
-                document.getElementById("content-frame").src = "https://flash-ai-s2.netlify.app/user-area/";
+                document.getElementById("content-frame").src = "https://suryal93.github.io/SURYA-PRIVATE-HACK-/";
             } else {
                 alert("❌ Key Not Found In Server!");
             }
