--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="avatar"></div>
             </div>
         </div>
-        <h2>SURYA FLASH AI S2</h2>
+        <h2>SURYA PRIVATE SERVER AI S3 ULTRA</h2>
 
         <form id="login-form">
             <div class="input-box">
