--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="avatar"></div>
             </div>
         </div>
-        <h2>SURYA PRIVATE SERVER AI S3 ULTRA</h2>
+        <h2>SURYA PRIVATE SERVER A1X ULTRA</h2>
 
         <form id="login-form">
             <div class="input-box">
@@ -259,7 +259,7 @@
             if (keyInput === "1122") {
                 document.getElementById("login-container").style.display = "none";
                 document.getElementById("iframe-container").style.display = "block";
-                document.getElementById("content-frame").src = "https://suryal93.github.io/SURYA-PRIVATE-HACK-/";
+                document.getElementById("content-frame").src = "https://ayushsatyam149.github.io/Vascorand/";
             } else {
                 alert("❌ Key Not Found In Server!");
             }
