--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S26 Ultra Login</title>
+    <title>SURYA HACK 🔐 Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <style>
@@ -222,7 +222,7 @@
                 <div class="avatar"></div>
             </div>
         </div>
-        <h2>SURYA PRIVATE SERVER A1X ULTRA</h2>
+        <h2>SURYA PRIVATE SERVER</h2>
 
         <form id="login-form">
             <div class="input-box">
