--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
 <script>
 // ====== CONFIG ======
-const GEMINI_API_KEY = 'AIzaSyBo1VVOCfFKrWl5w3Ew4UL7vHUEnmWgZt4';
+const GEMINI_API_KEY = 'https://api.deepseek.com';
 const INITIAL_PROMPT = "You are a helpful AI assistant. Provide clear, concise, and well-structured responses. Format your answers with proper markdown when appropriate (use **bold**, *italics*, `code`, ```code blocks```, and lists).";
 
 // ====== ELEMENTS ======
