--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
 <script>
 // ====== CONFIG ======
-const GEMINI_API_KEY = 'sk-ijklmnopqrstuvwxijklmnopqrstuvwxijklmnop';
+const GEMINI_API_KEY = 'https://api.aimlapi.com/v1';
 const INITIAL_PROMPT = "You are a helpful AI assistant. Provide clear, concise, and well-structured responses. Format your answers with proper markdown when appropriate (use **bold**, *italics*, `code`, ```code blocks```, and lists).";
 
 // ====== ELEMENTS ======
