--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ function clearChat() {
   chatHistory = [];
   // Add a welcome message
   setTimeout(() => {
-    appendMessage('I AM SURYA AI', "Hello! How can I assist you today?");
+    appendMessage('I AM SURYA AI', "Hello! IM SURYA AI  How can I assist you today?");
   }, 300);
 }
 
